# OMPrayer

./: .gitignore  Cargo.toml  run.bat
src/: app.rs  config.rs  geom.rs  main.rs  material.rs  style.rs
src/geom/: kdtree.rs  mesh.rs  plane.rs  scene.rs  sphere.rs  tracer.rs
src/texture/: color.rs  grayscale.rs
