[package]
name = "prayer"
version = "0.1.0"
authors = ["Carlo <CRefice@gmail.com>"]
edition = "2018"

[dependencies]
image = "*"
itertools = "*"
nalgebra-glm = { version = "*", features = ["serde-serialize"] }
rand = "*"
rayon = "*"
serde = { version = "*", features = ["derive"] }
toml = "*"
iced = { git = "https://github.com/hecrj/iced", features = ["image"] }
nfd = "*"
tempfile = "3.1.0"
dialog = "0.3.0"
names = "0.9.0"
tinyfiledialogs = "3.0"
